--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -1,4 +1,4 @@
-rocksdb.dbname=/tmp/ycsb-rocskdb
+rocksdb.dbname=/mnt/rocksdb_testdir
 rocksdb.format=single
 rocksdb.destroy=false
 
@@ -6,14 +6,14 @@ rocksdb.destroy=false
 #rocksdb.optionsfile=rocksdb/options.ini
 
 # Below options are ignored if options file is used
-rocksdb.compression=snappy
-rocksdb.max_background_jobs=2
-rocksdb.target_file_size_base=67108864
-rocksdb.target_file_size_multiplier=1
-rocksdb.max_bytes_for_level_base=268435456
-rocksdb.write_buffer_size=67108864
-rocksdb.max_write_buffer_number=2
-rocksdb.cache_size=8388608
+#rocksdb.compression=snappy
+#rocksdb.max_background_jobs=2
+#rocksdb.target_file_size_base=67108864
+#rocksdb.target_file_size_multiplier=1
+#rocksdb.max_bytes_for_level_base=268435456
+#rocksdb.write_buffer_size=67108864
+#rocksdb.max_write_buffer_number=2
+#rocksdb.cache_size=8388608
 
-rocksdb.increase_parallelism=false
-rocksdb.optimize_level_style_compaction=false
+#rocksdb.increase_parallelism=false
+#rocksdb.optimize_level_style_compaction=false
