feature : add rocksdb properties rocksdb.statistics when statistics are enabled, it prints out the statistics after running the benchmark author : Junhan

--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -1,19 +1,19 @@
-rocksdb.dbname=/mnt/rocksdb_test
+rocksdb.dbname=/mnt/lcf_test
 rocksdb.format=single
 rocksdb.destroy=false
 
+rocksdb.statistics=enable
 # Load options from file
 #rocksdb.optionsfile=rocksdb/options.ini
 
 # Below options are ignored if options file is used
-rocksdb.max_background_jobs=4
+rocksdb.max_background_jobs=3
 
 rocksdb.compaction_style = kCompactionStyleLevel
 rocksdb.write_buffer_size = 67108864
 rocksdb.max_write_buffer_number = 3
 rocksdb.target_file_size_base = 67108864
-rocksdb.max_background_compactions = 4
-rocksdb.level0_file_num_compaction_trigger = 8 
+rocksdb.level0_file_num_compaction_trigger = 4
 rocksdb.level0_slowdown_writes_trigger = 17 
 rocksdb.level0_stop_writes_trigger = 24
 rocksdb.num_levels = 4
