--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -1,4 +1,4 @@
-rocksdb.dbname=/mnt/lcf_test
+rocksdb.dbname=/mnt/rocksdb_test
 rocksdb.format=single
 rocksdb.destroy=false
 
@@ -7,16 +7,10 @@ rocksdb.statistics=enable
 #rocksdb.optionsfile=rocksdb/options.ini
 
 # Below options are ignored if options file is used
-rocksdb.max_background_jobs=3
-
+rocksdb.max_background_jobs=2
 rocksdb.compaction_style = kCompactionStyleLevel
 rocksdb.write_buffer_size = 67108864
-rocksdb.max_write_buffer_number = 3
+rocksdb.max_write_buffer_number = 2
 rocksdb.target_file_size_base = 67108864
-rocksdb.level0_file_num_compaction_trigger = 4
-rocksdb.level0_slowdown_writes_trigger = 17 
-rocksdb.level0_stop_writes_trigger = 24
 rocksdb.num_levels = 4
-rocksdb.max_bytes_for_level_base = 536870912
-rocksdb.max_bytes_for_level_multiplier = 8
-rocksdb.cache_size = 4294967296
+rocksdb.row_cache_size = 67108864
