--- a/rocksdb/rocksdb.properties
+++ b/rocksdb/rocksdb.properties
@@ -7,10 +7,21 @@ rocksdb.statistics=enable
 #rocksdb.optionsfile=rocksdb/options.ini
 
 # Below options are ignored if options file is used
-rocksdb.max_background_jobs=2
+rocksdb.max_background_jobs=32
 rocksdb.compaction_style = kCompactionStyleLevel
 rocksdb.write_buffer_size = 67108864
+#rocksdb.write_buffer_size = 33554432
+#rocksdb.write_buffer_size = 16777216
+#rocksdb.write_buffer_size = 8388608
+#rocksdb.write_buffer_size = 4194304
 rocksdb.max_write_buffer_number = 2
-rocksdb.target_file_size_base = 67108864
-rocksdb.num_levels = 4
-rocksdb.row_cache_size = 67108864
+rocksdb.target_file_size_base = 67108864 
+rocksdb.num_levels = 7
+rocksdb.max_subcompactions = 1
+rocksdb.allow_column_family_split = true
+rocksdb.level0_file_num_compaction_trigger=4
+rocksdb.level0_slowdown_writes_trigger=20
+rocksdb.level0_stop_writes_trigger=36
+# Static Column Family Configuration
+rocksdb.static_lcf = true
+rocksdb.static_lcf_num_bit = 0
